# EngineeringSketchPad

./: .gitattributes  CMakeLists.txt  README.md  download.sh  index.html  stage.sh
EngSketchPad/: README.txt  Revision.txt
EngSketchPad/CAPSexamples/: Makefile  NMakefile  README.txt
EngSketchPad/ESP/: ESP-capsMode.css  ESP-capsMode.js  ESP-ereped.css  ESP-ereped.js  ESP-flowchart.js  ESP-gloves.css  ESP-gloves.js  ESP-help.html  ESP-localhost7681.html  ESP-mitten.css  ESP-mitten.js  ESP-plotter.css  ESP-plotter.js  ESP-plugs.css  ESP-plugs.js  (+13 more)
PaxHeader/: README.txt
include/: LINUX64  OpenCSM.h  STANALYZER.make  acutest.h  aimMesh.h  aimTest.h  aimUtil.h  caps.h  capsErrors.h  capsTypes.h  common.h  egads.h  egads.inc  egadsTris.h  egadsTypes.h  egads_dot.h  egg.h  emp.h  esp.h  prm.h  tim.h  udp.h  udpUtilities.c  udpUtilities.h  wsserver.h  wsss.h
lib/: libTKBRep.so.7.8.1  libTKBinTObj.so.7.8  libTKBinXCAF.so.7.8  libTKBool.so.7.8  libTKCAF.so.7.8  libTKDE.so.7.8  libTKDECascade.so.7.8  libTKDEGLTF.so.7.8.1  libTKDEOBJ.so.7.8.1  libTKDEPLY.so.7.8.1  libTKDEVRML.so.7.8.1  libTKFeat.so.7.8  libTKG3d.so.7.8.1  libTKGeomAlgo.so.7.8  libTKGeomBase.so.7.8.1  libTKHLR.so.7.8  libTKMath.so.7.8  libTKMesh.so.7.8.1  libTKOffset.so.7.8.1  libTKRWMesh.so.7.8  libTKStd.so.7.8  libTKTopAlgo.so.7.8.1  libTKVCAF.so.7.8  libTKXCAF.so.7.8  libTKXMesh.so.7.8.1  libTKXSBase.so.7.8.1  libTKXml.so.7.8.1  libTKXmlL.so.7.8.1  libTKXmlTObj.so.7.8  libTKXmlXCAF.so.7.8  libgfortran.so.3  libquadmath.so.0  libudunits2.so.0
pyESP/: setup.py
test/: CMakeLists.txt  verifyInclude.cpp
(+2716 files in other folders)
